add service metrics
